# recommendation-data-toolbox

./: .gitignore  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
param_estimation/: __main__.py  param_estimation.py  raw_data_transform.py  utility_functions.py  utils.py
recommendation_cl_utils/: __init__.py  __main__.py  benchmark_recommender.py  constants.py  mock_data.py  mock_experiment_data.py  param_estimation.py  raw_data_transform.py  utils.py
recommendation_cl_utils/rec_benchmarking/: benchmark.py  cf.py  common.py  content_based.py
recommendation_cl_utils/tests/: test_utils.py
recommendation_data_toolbox/: constants.py  cpc2015.py  lottery.py  mle.py  recommender.py  utility_functions.py  utils.py
recommendation_data_toolbox/collaborative_filtering/: cf_recommender.py  user_based.py
recommendation_data_toolbox/lottery_utility/: __init__.py  exceptions.py  lottery_utility.py  outcome_utility.py  prob_weight.py  utils.py
recommendation_data_toolbox/models/: lottery_utility.py  outcome_utility.py  prob_weight.py
recommendation_data_toolbox/rec/: __init__.py  choice_based.py  content_based.py  recommender.py
recommendation_data_toolbox/resources/: Preexperiment_OptionBFracs.csv  majority.csv
recommendation_data_toolbox/tests/: mock_data.py  test_cpc2015.py  test_lottery.py  test_mle.py  test_utility_functions.py  test_utils.py
tests/: test_lottery.py  test_utility_functions.py  test_utils.py
tests/param_estimation/: test_main.py  test_param_estimation.py  test_utility_models.py  (+2 more)
(+17 files in other folders)
