[metadata]
name = recommendation-data-toolbox
version = 0.0.1
author = Dan N. Tran
author_email = picasdan99@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nusbeelab/recommendation-data-toolbox

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy>=1.22.2
    scipy>=1.8.0
    scikit-learn>=1.0.2